--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,17 @@
-* {
-    padding: 0;
-    margin: 0;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 .gallery {
+    max-width: 1000px;
     display: grid;
-    grid-template-columns: 12px 12px 12px;
-    grid-template-rows: 12px 12px 12px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1em;
 }
 
 
