--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,12 @@ img {
 }
 
 .gallery {
-    max-width: 1000px;
+    max-width: 875px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    margin: 0 auto;
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1em;
 }
 
