--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,33 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-img {
-    width: 100%;
-    height: 100%;
+header {
+    display: flex;
+    justify-content: center;
 }
 
+header input {
+    padding: 1em;
+    margin: 2em 0;
+    width: 50vw;
+    max-width: 520px;
+    border-radius: 5px;
+} 
+
 .gallery {
+    padding: 0 1em;
     max-width: 875px;
     display: grid;
     margin: 0 auto;
     justify-content: center;
     align-content: center;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 1em;
+    grid-gap: 1.5em;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 
