--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ header input {
     max-width: 875px;
     display: grid;
     margin: 0 auto;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, 200px);
+    place-content: start center;
     grid-gap: 1.5em;
 }
 
@@ -28,6 +29,8 @@ a {
     justify-content: center;
     align-items: center;
 }
+
+
 
 
 
